--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ cfg-if = "1.0.0"
 rlp = "0.5.2"
 wasm-bindgen = "0.2.92"
 ordinals = "0.0.8"
+anyhow = "1.0.86"
+serde = "1.0.208"
+hex = "0.4.3"
+#wasmer-compiler-singlepass-near = "2.4.1"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
