--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 bitcoin = "0.31.2"
@@ -20,9 +20,6 @@ anyhow = "1.0.86"
 serde = "1.0.208"
 hex = "0.4.3"
 wasmi = "0.31.0"
-metashrew-runtime = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
-getrandom = { version = "0.2.15", features = ["js"] }
-web-sys = "0.3.70"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
