--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ anyhow = "1.0.86"
 serde = "1.0.208"
 hex = "0.4.3"
 wasmi = "0.31.0"
+libflate = "2.1.0"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
