--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ libflate = "2.1.0"
 ruint = "1.12.3"
 wasmi_core = "0.36.0"
 sha3 = "0.10.8"
+ripemd = "0.1.3"
+bech32 = "0.11.0"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
